MAP Katmanı DAL Katmanı tamamlandı ve BLL Katmanına başlangıç yapıldı

--- a/Project.BLL/Project.BLL.csproj
+++ b/Project.BLL/Project.BLL.csproj
@@ -51,11 +51,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DesignPatterns\GenericRepository\IntRep\IRepository.cs" />
+    <Compile Include="DesignPatterns\SingletonPattern\DBTool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Project.ENTITIES\Project.ENTITIES.csproj">
+      <Project>{7c4825ac-3cf8-4fb5-9037-431fca5ec7fe}</Project>
+      <Name>Project.ENTITIES</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Prpject.DAL\Project.DAL.csproj">
+      <Project>{b935dbe9-b1f0-472b-a8b5-d31645810db3}</Project>
+      <Name>Project.DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DesignPatterns\GenericRepository\BaseRep\" />
+    <Folder Include="DesignPatterns\GenericRepository\ConcRep\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
