--- a/Project.MVCUI/Web.config
+++ b/Project.MVCUI/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	<connectionStrings>
-		<add connectionString="server=LAPTOP-9OAEOUDS\SQLEXPRESS;database=MVCNTierDB:integrated security=true" providerName="System.Data.SqlClient" name="myConnnection"/>
+		<add connectionString="server=LAPTOP-9OAEOUDS\SQLEXPRESS;database=MVCNTierDB;integrated security=true" providerName="System.Data.SqlClient" name="myConnection"/>
 		
 	</connectionStrings>
 	
