--- a/Project.BLL/Project.BLL.csproj
+++ b/Project.BLL/Project.BLL.csproj
@@ -52,6 +52,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DesignPatterns\GenericRepository\BaseRep\BaseRepository.cs" />
+    <Compile Include="DesignPatterns\GenericRepository\ConcRep\AppUserRepository.cs" />
+    <Compile Include="DesignPatterns\GenericRepository\ConcRep\ArticleRepository.cs" />
+    <Compile Include="DesignPatterns\GenericRepository\ConcRep\ArticleTagRepository.cs" />
+    <Compile Include="DesignPatterns\GenericRepository\ConcRep\CategoryRepository.cs" />
+    <Compile Include="DesignPatterns\GenericRepository\ConcRep\EditoryRepository.cs" />
+    <Compile Include="DesignPatterns\GenericRepository\ConcRep\ProfileRepository.cs" />
+    <Compile Include="DesignPatterns\GenericRepository\ConcRep\TagRepository.cs" />
     <Compile Include="DesignPatterns\GenericRepository\IntRep\IRepository.cs" />
     <Compile Include="DesignPatterns\SingletonPattern\DBTool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -70,9 +77,7 @@
       <Name>Project.DAL</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DesignPatterns\GenericRepository\ConcRep\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
