--- a/Project.MVCUI/Views/Web.config
+++ b/Project.MVCUI/Views/Web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="Project.MVCUI" />
+        <add namespace="Project.MVCUI.VMClasses" />
+        <add namespace="Project.ENTITIES.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
